css/main.css
/* ... */
.faq .item .question {
  margin-top: 0;
  font-size: 18px;
  margin-bottom: 15px;
}
.faq .item .question .fa {
  margin-right: 10px;
  color: #2e4153;
}
.faq .item .answer {
  color: #333;
  font-weight: 300;
}
.faq .more {
  margin-top: 30px;
}
.faq .more h4.title {
  margin-bottom: 15px;
  color: #999999;
  font-size: 18px;
}
.faq .more .btn {
  font-size: 18px;
  padding-left: 20px;
  padding-right: 20px;
}
.faq .more .btn .fa {
  margin-left: 5px;
}
.footer {
  background-color: #2e4153;
  color: #fff;
  padding: 0 0 0 0;
}
.footer .social-icons {
  padding-top: 10px;
  padding-bottom: 2px;
  display: inline-block;
  margin: 0 auto;
}
.footer .social-icons .mail {
  padding-top: 10px;
}
.footer .copyright {
  padding-left: 0;
  padding-right: 0;
}
.footer .links {
  white-space: nowrap;
}
.footer .links a {
  color: #fff;
}
.footer .links a:hover {
  color: #1f2c38;
}
.api {
  padding-top: 80px;
}
.api .row {
  padding-top: 5px;
  border-bottom: 1px solid #dadfe5;
}
.api .row:first-child {
  padding-top: 0;
  border-bottom: none;
}
.api-endpoints {
  background: #f5f5f5;
  padding: 2px 5px;
  border-right: 1px solid #dadfe5;
  font-size: 9px;
  position: fixed;
  left: 0;
  top: 81px;
  bottom: 0;
  overflow-y: auto;
  display: none;
  -webkit-box-shadow: inset -8px 0 8px -8px rgba(0, 0, 0, 0.3);
  -moz-box-shadow: inset -8px 0 8px -8px rgba(0, 0, 0, 0.3);
  box-shadow: inset -8px 0 8px -8px rgba(0, 0, 0, 0.3);
}
.api-endpoints .api-endpoints-list {
  padding: 0;
  margin-bottom: 0;
  list-style-type: none;
}
.api-endpoints .api-endpoints-list li:first-child {
  text-align: center;
  font-size: 14px;
}
.api-endpoints a:hover {
  text-decoration: underline;
}
.api-endpoint .api-header {
  font-size: 20px;
  font-weight: bold;
  margin-top: 10px;
}
.api-endpoint-code {
  padding-top: 15px;
  margin-bottom: 15px;
}
.api-endpoint pre {
  padding: 30px 0;
  margin: 10px auto;
  width: 550px;
  border: none;
  background-color: rgba(255, 255, 255, 0.10);
  position: relative;
  top: -2px;
  display: inline;
  padding: 4px 4px 2px 4px;
  border-radius: 3px;
  background-color: rgba(0, 0, 0, 0.2);
  white-space: nowrap;
}
.tutorial {
  padding-top: 80px;
}
.tutorial .tutorial-title,
.tutorial .tutorial-header {
  text-align: center;
}
.tutorial .tutorial-button {
  height: 70px;
  margin-bottom: 10px;
}
.tutorial .tutorial-button .btn {
  background-color: #4f6479;
  display: block;
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  background-position: center;
}
.tutorial .tutorial-button .btn.active {
  background-color: #2e4153;
  outline: 0;
  -webkit-box-shadow: inset 0 5px 6px rgba(0, 0, 0, 0.2);
  box-shadow: inset 0 5px 6px rgba(0, 0, 0, 0.2);
}
.tutorial .tutorial-button .btn .label {
  position: absolute;
  top: 5px;
  right: 20px;
  background-color: rgba(0, 0, 0, 0.5);
  padding: 4px;
}
.tutorial .tutorial-point {
  margin-bottom: 10px;
  display: table;
}
.tutorial .tutorial-point-container {
  display: table-row;
}
.tutorial .tutorial-point-label {
  width: 50px;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  background-color: #e4edff;
  font-size: 1.8em;
  text-align: center;
  vertical-align: middle;
  display: table-cell;
}
.tutorial .tutorial-point-description {
  width: auto;
  background-color: #b3c9df;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  font-size: 1.2em;
  padding: 16px;
  display: table-cell;
}
.tutorial pre {
  padding: 30px 0;
  margin: 10px auto;
  width: 550px;
  border: none;
  background-color: rgba(255, 255, 255, 0.10);
  position: relative;
  top: -2px;
  display: inline;
  padding: 4px 4px 2px 4px;
  border-radius: 3px;
  background-color: rgba(0, 0, 0, 0.2);
  white-space: nowrap;
}

































a.anchor {
  position: relative;
  top: -50px;
  visibility: hidden;
  display: block;
}
a.anchor.api-anchor {
  top: -71px;
}
@media (max-width: 414px) {
  .promo .overview h2 {
    font-size: 28px;
  }
}
@media (max-width: 767px) {
  .promo .overview .summary li {
    font-size: 18px;
  }
  .promo .overview .summary {
    margin-left: 0;
  }
  .promo .overview {
    text-align: center;
  }
  .promo .overview .summary {
    margin-left: 0;
  }
  .promo .overview .summary li {
    text-align: left;
  }
  .promo .overview .download-area {
    margin: 0 auto;
  }
  .promo .overview .btn-group {
    padding-left: 10px;
    padding-right: 10px;
  }
  .promo .laptop .laptop-holder {
    -webkit-background-size: 300px auto;
    -moz-background-size: 300px auto;
    -o-background-size: 300px auto;
    background-size: 300px auto;
    height: 175px;
    margin-left: 0;
    padding-left: 0;
    margin-right: 0;
    padding-right: 0;
  }
  .promo .laptop .laptop-holder-inner {
    padding-top: 10px;
    width: 228px;
    height: 153px;
  }
  .promo .laptop .flexslider .flex-control-nav {
    padding-bottom: 4px;
  }
  .comparison .row .col p {
    padding: 8px 5px;
  }
  .comparison .row .col i {
    padding: 10px;
  }
  .footer .copyright {
    text-align: center;
    padding-top: 0;
  }
  .api-doc .api-header {
    font-size: 17px;
  }
  .api-endpoint-code {
    padding-top: 0;
  }
}
@media (min-width: 768px) {
  .promo .overview {
    text-align: center;
  }
  .promo .overview .summary {
    margin-left: 60px;
  }
  .promo .overview .summary li {
    text-align: left;
  }
  .promo .overview .download-area {
    margin: 0 auto;
  }
  .promo .overview .btn-group {
    padding-left: 10px;
    padding-right: 10px;
  }
  .footer .copyright {
    text-align: center;
    padding-top: 0;
  }
}
/* ... */

